--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,19 @@ html.light {
     &:focus {
       border-color: $accent;
     }
+    &::placeholder {
+      color: #aaa;
+    }
+  }
+  button.contrast {
+    background-color: theme('colors.light1');
+    color: theme('colors.textlight');
+    border: 1px solid theme('colors.accent');
+
+    &:hover {
+      background-color: theme('colors.accent');
+      color: theme('colors.light1');
+    }
   }
 }
 
@@ -59,6 +72,18 @@ html.dark {
   input {
     background-color: $dark2;
     color: #eee;
+  }
+  button {
+    &.contrast {
+      background-color: $dark2;
+      border: 1px solid $accent;
+      color: $accent;
+  
+      &:hover {
+        background-color: $accent;
+        color: #eee;
+      }
+    }  
   }
 }
 
@@ -97,17 +122,6 @@ button:not(.style-link):not(.style-none) {
     cursor: not-allowed;
     color: transparentize(#eee, 0.5);
     background-color: transparentize($accent, 0.5);
-  }
-  
-  &.contrast {
-    background-color: $dark2;
-    border: 1px solid $accent;
-    color: $accent;
-
-    &:hover {
-      background-color: $accent;
-      color: #eee;
-    }
   }
 }
 
